--- a/Part.3.B.2.classes-2.ipynb
+++ b/Part.3.B.2.classes-2.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -581,7 +581,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -591,7 +591,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -601,7 +601,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -611,7 +611,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -621,7 +621,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -631,7 +631,7 @@
        "10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -641,7 +641,7 @@
        "11"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -651,7 +651,7 @@
        "10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -661,7 +661,7 @@
        "10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -671,7 +671,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -978,7 +978,7 @@
        "101"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -988,70 +988,7 @@
        "101"
       ]
      },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class Golem in module __main__:\n",
-      "\n",
-      "class Golem(builtins.object)\n",
-      " |  Golem(name=None)\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, name=None)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  cease(self)\n",
-      " |  \n",
-      " |  is_active(self)\n",
-      " |  \n",
-      " |  say_hi(self)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  population\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "mappingproxy({'__module__': '__main__',\n",
-       "              '_Golem__population': 101,\n",
-       "              '_Golem__life_span': 10,\n",
-       "              '__init__': <function __main__.Golem.__init__(self, name=None)>,\n",
-       "              'say_hi': <function __main__.Golem.say_hi(self)>,\n",
-       "              'cease': <function __main__.Golem.cease(self)>,\n",
-       "              'is_active': <function __main__.Golem.is_active(self)>,\n",
-       "              'population': <property at 0x1068f9d68>,\n",
-       "              '__dict__': <attribute '__dict__' of 'Golem' objects>,\n",
-       "              '__weakref__': <attribute '__weakref__' of 'Golem' objects>,\n",
-       "              '__doc__': None})"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Clay', 'built_year': 2019, '_Golem__active': True}"
-      ]
-     },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1061,17 +998,17 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<property at 0x1068f9d68>"
+       "<property at 0x540c2c8>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1081,7 +1018,7 @@
        "10000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,17 +1061,24 @@
     "g = Golem('Clay')\n",
     "g.population\n",
     "g.population = 100\n",
-    "ga = Golem('New')\n",
+    "ga = Golem('New') #这里再次调用了__init__构造方法，所以__population+1=101\n",
     "g.population\n",
     "ga.population\n",
-    "help(Golem)\n",
-    "Golem.__dict__\n",
-    "g.__dict__\n",
+    "#help(Golem)\n",
+    "#Golem.__dict__\n",
+    "#g.__dict__\n",
     "hasattr(Golem, 'population')\n",
     "getattr(Golem, 'population')\n",
     "setattr(Golem, 'population', 10000)\n",
     "g.population    # 所以，在很多的情况下，不把数据封装在 Class 内部的话，后面会有很多麻烦。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
