--- a/Part.3.B.3.decorator-iterator-generator.ipynb
+++ b/Part.3.B.3.decorator-iterator-generator.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "'P'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -141,7 +141,7 @@
        "'y'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -151,7 +151,7 @@
        "'t'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -161,7 +161,7 @@
        "'h'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -171,7 +171,7 @@
        "'o'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -181,7 +181,17 @@
        "'n'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str_iterator"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +237,7 @@
        "11"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -237,7 +247,7 @@
        "12"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -247,7 +257,7 @@
        "13"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -255,11 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n"
+      "101, 102, 103, 104, 105, "
      ]
     },
     {
@@ -268,7 +274,7 @@
        "type"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +299,7 @@
     "next(c)\n",
     "next(c)\n",
     "for c in Counter(101, 105):\n",
-    "    print(c, sep=', ')\n",
+    "    print(c, end=', ')\n",
     "type(Counter)"
    ]
   },
@@ -313,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -327,6 +333,16 @@
       "202\n",
       "203\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "type"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -372,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -385,13 +401,23 @@
       "104\n",
       "105\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def counter(start, stop):\n",
     "    while start <= stop:\n",
     "        yield start\n",
-    "        start += 1\n",
+    "        start += 1       \n",
     "for i in counter(101, 105):\n",
     "    print(i)"
    ]
@@ -576,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +678,17 @@
        "<function __main__.a_func.<locals>.b_func()>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +712,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": false
    },
    "source": [
     "## 装饰器（Decorator）"
@@ -794,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -805,6 +841,16 @@
       "Hi, I'm a_func!\n",
       "... and we can do sth. after it was called...\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.a_decorator.<locals>.wrapper()>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -819,6 +865,7 @@
     "def a_func():\n",
     "    print(\"Hi, I'm a_func!\")\n",
     "    \n",
+    "#a_func = a_decorator(a_func)\n",
     "a_func()"
    ]
   },
@@ -922,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1091,6 +1138,13 @@
     "\n",
     "为什么有那么多人就是学不会呢？—— 只不过是因为在此之前，遇到 `*args` `**kwargs` 的时候，“一个星号、两个星号、直接晕倒”…… 而后并未再多挣扎一下。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
