--- a/Part.3.B.4.regex.ipynb
+++ b/Part.3.B.4.regex.ipynb
@@ -1263,6 +1263,36 @@
       "========================================================================\n",
       "Hello.  How are you feeling today?\n"
      ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  fine\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fine\n",
+      "Very interesting.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  How you doing?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How you doing?\n",
+      "Perhaps you can answer your own question.\n"
+     ]
     }
    ],
    "source": [
